crates/auryn-compiler/src/auryn/air/snapshots/auryn_compiler__auryn__air__tests__array_type.snap
---
source: crates/auryn-compiler/src/auryn/air/mod.rs
expression: "compile(\"fn main() {}\\nfn foo(array: []I32) -> []I32 { return array }\")"
---
(
    Air {
        globals: Globals {
            functions: {
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 31274997412295,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 31274997412295,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "main",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 58082138051405,
                                    },
                                ),
                            ),
                        },
                    },
                },
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 93824992236885,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 93824992236885,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "foo",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Return(
                                Expression(
                                    AirExpression {
                                        id: SyntaxId {
                                            file_id: Some(
                                                FileId(
                                                    1,
                                                ),
                                            ),
                                            number: 268071406391100,
                                        },
                                        type: Computed(
                                            Array(
                                                TypeId {
                                                    id: SyntaxId {
                                                        file_id: None,
                                                        number: 1,
                                                    },
                                                    kind: "auryn_compiler::auryn::air::typecheck::types::ArrayType",
                                                },
                                            ),
                                        ),
                                        kind: Variable(
                                            Local(
                                                AirLocalValueId(
                                                    0,
                                                ),
                                            ),
                                        ),
                                    },
                                ),
                            ),
                        },
                        AirBlockId(
                            1,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 232328552205620,
                                    },
                                ),
                            ),
                        },
                    },
                },
            },
        },
        ty_ctx: TypeContext { .. },
    },
    Diagnostics {
        diagnostics: [],
    },
)
