crates/auryn-compiler/src/auryn/air/snapshots/auryn_compiler__auryn__air__tests__explicit_unit.snap
---
source: crates/auryn-compiler/src/auryn/air/mod.rs
expression: "compile(r#\"\n                fn main() -> {} {\n                    foo(50)\n                }\n\n                fn foo(val: I32) -> () {\n                    if val > 50 {\n                        return {}\n                    }\n                }\n            \"#)"
---
(
    Air {
        globals: Globals {
            functions: {
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 124828033149936,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 124828033149936,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "foo",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Branch {
                                value: AirExpression {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 198256287944016,
                                    },
                                    type: Computed(
                                        Bool,
                                    ),
                                    kind: BinaryOperator(
                                        BinaryOperation {
                                            lhs: AirExpression {
                                                id: SyntaxId {
                                                    file_id: Some(
                                                        FileId(
                                                            1,
                                                        ),
                                                    ),
                                                    number: 208046721916560,
                                                },
                                                type: Computed(
                                                    I32,
                                                ),
                                                kind: Variable(
                                                    Local(
                                                        AirLocalValueId(
                                                            0,
                                                        ),
                                                    ),
                                                ),
                                            },
                                            rhs: AirExpression {
                                                id: SyntaxId {
                                                    file_id: Some(
                                                        FileId(
                                                            1,
                                                        ),
                                                    ),
                                                    number: 222732372875376,
                                                },
                                                type: Computed(
                                                    I32,
                                                ),
                                                kind: Constant(
                                                    Number(
                                                        50,
                                                    ),
                                                ),
                                            },
                                            operator: Greater,
                                        },
                                    ),
                                },
                                pos_block: AirBlockId(
                                    1,
                                ),
                                neg_block: AirBlockId(
                                    2,
                                ),
                            },
                        },
                        AirBlockId(
                            3,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 183570636985200,
                                    },
                                ),
                            ),
                        },
                        AirBlockId(
                            1,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Return(
                                Expression(
                                    AirExpression {
                                        id: SyntaxId {
                                            file_id: Some(
                                                FileId(
                                                    1,
                                                ),
                                            ),
                                            number: 254551283286144,
                                        },
                                        type: Computed(
                                            Structural(
                                                TypeId {
                                                    id: SyntaxId {
                                                        file_id: None,
                                                        number: 1,
                                                    },
                                                    kind: "auryn_compiler::auryn::air::typecheck::types::StructuralType",
                                                },
                                            ),
                                        ),
                                        kind: Constant(
                                            StructLiteral {
                                                struct_type: None,
                                                fields: [],
                                            },
                                        ),
                                    },
                                ),
                            ),
                        },
                        AirBlockId(
                            4,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Goto(
                                AirBlockId(
                                    3,
                                ),
                            ),
                        },
                        AirBlockId(
                            2,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Goto(
                                AirBlockId(
                                    3,
                                ),
                            ),
                        },
                    },
                },
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 22028476438224,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 22028476438224,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "main",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 68533037807808,
                                    },
                                    kind: Expression(
                                        AirExpression {
                                            id: SyntaxId {
                                                file_id: Some(
                                                    FileId(
                                                        1,
                                                    ),
                                                ),
                                                number: 68533037807808,
                                            },
                                            type: Computed(
                                                Structural(
                                                    TypeId {
                                                        id: SyntaxId {
                                                            file_id: None,
                                                            number: 1,
                                                        },
                                                        kind: "auryn_compiler::auryn::air::typecheck::types::StructuralType",
                                                    },
                                                ),
                                            ),
                                            kind: Call(
                                                Call {
                                                    function: AirExpression {
                                                        id: SyntaxId {
                                                            file_id: Some(
                                                                FileId(
                                                                    1,
                                                                ),
                                                            ),
                                                            number: 75875863287216,
                                                        },
                                                        type: Computed(
                                                            FunctionItem(
                                                                TypeId {
                                                                    id: SyntaxId {
                                                                        file_id: Some(
                                                                            FileId(
                                                                                1,
                                                                            ),
                                                                        ),
                                                                        number: 124828033149936,
                                                                    },
                                                                    kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                                                                },
                                                            ),
                                                        ),
                                                        kind: Variable(
                                                            Global(
                                                                AirStaticValueId(
                                                                    SyntaxId {
                                                                        file_id: Some(
                                                                            FileId(
                                                                                1,
                                                                            ),
                                                                        ),
                                                                        number: 124828033149936,
                                                                    },
                                                                ),
                                                            ),
                                                        ),
                                                    },
                                                    arguments: [
                                                        AirExpression {
                                                            id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: 90561514246032,
                                                            },
                                                            type: Computed(
                                                                I32,
                                                            ),
                                                            kind: Constant(
                                                                Number(
                                                                    50,
                                                                ),
                                                            ),
                                                        },
                                                    ],
                                                    generic_arguments: Computed(
                                                        [],
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 61190212328400,
                                    },
                                ),
                            ),
                        },
                    },
                },
            },
        },
        ty_ctx: TypeContext { .. },
    },
    Diagnostics {
        diagnostics: [],
    },
)
