crates/auryn-compiler/src/auryn/air/snapshots/auryn_compiler__auryn__air__tests__extern_items.snap
---
source: crates/auryn-compiler/src/auryn/air/mod.rs
expression: "compile(\"unsafe extern \\\"java\\\" { [\\\"java/lang/Foo\\\"] type Foo { [\\\"foo\\\"] static let foo: I32 } }\")"
---
(
    Air {
        globals: Globals {
            functions: {},
        },
        ty_ctx: TypeContext { .. },
    },
    Diagnostics {
        diagnostics: [],
    },
)
