crates/auryn-compiler/src/auryn/air/snapshots/auryn_compiler__auryn__air__tests__function_call.snap
---
source: crates/auryn-compiler/src/auryn/air/mod.rs
expression: "compile(\"fn main() { foo(1) }\\nfn foo(bar: I32) -> I32 { print(bar) }\")"
---
(
    Air {
        globals: Globals {
            functions: {
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 25588634246420,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 25588634246420,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "main",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 62143826027020,
                                    },
                                    kind: Expression(
                                        AirExpression {
                                            id: SyntaxId {
                                                file_id: Some(
                                                    FileId(
                                                        1,
                                                    ),
                                                ),
                                                number: 62143826027020,
                                            },
                                            type: Computed(
                                                I32,
                                            ),
                                            kind: Call(
                                                Call {
                                                    function: AirExpression {
                                                        id: SyntaxId {
                                                            file_id: Some(
                                                                FileId(
                                                                    1,
                                                                ),
                                                            ),
                                                            number: 73110383561200,
                                                        },
                                                        type: Computed(
                                                            FunctionItem(
                                                                TypeId {
                                                                    id: SyntaxId {
                                                                        file_id: Some(
                                                                            FileId(
                                                                                1,
                                                                            ),
                                                                        ),
                                                                        number: 135254209588220,
                                                                    },
                                                                    kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                                                                },
                                                            ),
                                                        ),
                                                        kind: Variable(
                                                            Global(
                                                                AirStaticValueId(
                                                                    SyntaxId {
                                                                        file_id: Some(
                                                                            FileId(
                                                                                1,
                                                                            ),
                                                                        ),
                                                                        number: 135254209588220,
                                                                    },
                                                                ),
                                                            ),
                                                        ),
                                                    },
                                                    arguments: [
                                                        AirExpression {
                                                            id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: 95043498629560,
                                                            },
                                                            type: Computed(
                                                                I32,
                                                            ),
                                                            kind: Constant(
                                                                Number(
                                                                    1,
                                                                ),
                                                            ),
                                                        },
                                                    ],
                                                    generic_arguments: Computed(
                                                        [],
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 51177268492840,
                                    },
                                ),
                            ),
                        },
                    },
                },
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 135254209588220,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 135254209588220,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "foo",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 230297708217780,
                                    },
                                    kind: Expression(
                                        AirExpression {
                                            id: SyntaxId {
                                                file_id: Some(
                                                    FileId(
                                                        1,
                                                    ),
                                                ),
                                                number: 230297708217780,
                                            },
                                            type: Computed(
                                                Structural(
                                                    TypeId {
                                                        id: SyntaxId {
                                                            file_id: None,
                                                            number: 1,
                                                        },
                                                        kind: "auryn_compiler::auryn::air::typecheck::types::StructuralType",
                                                    },
                                                ),
                                            ),
                                            kind: Call(
                                                Call {
                                                    function: AirExpression {
                                                        id: SyntaxId {
                                                            file_id: Some(
                                                                FileId(
                                                                    1,
                                                                ),
                                                            ),
                                                            number: 241264265751960,
                                                        },
                                                        type: Computed(
                                                            Intrinsic(
                                                                TypeId {
                                                                    id: SyntaxId {
                                                                        file_id: None,
                                                                        number: 1,
                                                                    },
                                                                    kind: "auryn_compiler::auryn::air::typecheck::types::IntrinsicType",
                                                                },
                                                            ),
                                                        ),
                                                        kind: Variable(
                                                            Intrinsic(
                                                                Print,
                                                            ),
                                                        ),
                                                    },
                                                    arguments: [
                                                        AirExpression {
                                                            id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: 266852899998380,
                                                            },
                                                            type: Computed(
                                                                I32,
                                                            ),
                                                            kind: Variable(
                                                                Local(
                                                                    AirLocalValueId(
                                                                        0,
                                                                    ),
                                                                ),
                                                            ),
                                                        },
                                                    ],
                                                    generic_arguments: Computed(
                                                        [],
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 219331150683600,
                                    },
                                ),
                            ),
                        },
                    },
                },
            },
        },
        ty_ctx: TypeContext { .. },
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                syntax_id: SyntaxId {
                    file_id: Some(
                        FileId(
                            1,
                        ),
                    ),
                    number: 219331150683600,
                },
                kind: "Type mismatch",
                ..
            },
        ],
    },
)
